<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/basic_margin"
    android:layout_marginRight="@dimen/basic_margin"
    android:layout_marginBottom="@dimen/basic_margin"
    android:background="@android:color/white"
    android:clickable="false"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_animal_hint_title"
        android:inputType="textPersonName"
        android:padding="@dimen/basic_margin" />

    <Spinner
        android:id="@+id/search_animal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_margin" />

    <Spinner
        android:id="@+id/search_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_margin" />

    <Spinner
        android:id="@+id/search_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_margin" />

    <Spinner
        android:id="@+id/search_tag_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_margin" />

    <EditText
        android:id="@+id/search_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_animal_hint_tag"
        android:inputType="textPersonName"
        android:padding="@dimen/basic_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/search_location"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginRight="@dimen/basic_margin"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/search_my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/basic_margin"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:padding="@dimen/basic_margin"
            app:srcCompat="@drawable/ic_my_location" />
    </LinearLayout>

    <Button
        android:id="@+id/search_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_start_button" />

</LinearLayout>